# entia-mcp-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  buildspec.yml  glama.json  package-lock.json  package.json  pyproject.toml  robots.txt  server.json
.github/workflows/: aws-ecs-deploy.yml
docs/: AWS_ADAPTATION_PLAN.md  EXECUTION_PLAN_OBSERVABILITY_DISTRIBUTION.md  KEY_ROTATION_PRE_SWITCH_2026-05-10.md  P0_BLOCKERS_FASE_1.md  P0_BLOCKERS_FASE_3.md  SECURITY_AND_GOVERNANCE.md  SESSION_LOG_2026-04-10.md  SMOKE_REAL_CLIENT_2026-05-10.md  aws-migration-assumptions.md  funnel-web-implementation.md
entia_mcp/: __init__.py  client.py  config.py  funnel.py  funnel_api.py  langchain.py  server.py
examples/: basic_usage.py  crewai_agent.py  langchain_agent.py
infra/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: run_funnel_api.sh
server/: README.md  __init__.py  mcp_server.py  requirements.txt
src/: client.ts  config.ts  index.ts  logger.ts  rate_limiter.ts  server.ts  session_store.ts
src/tools/: ai_ready_profile.ts  borme_lookup.ts  entity_lookup.ts  full_dossier.ts  get_competitors.ts  get_entia_home.ts  get_platform_stats.ts  get_showcase.ts  lookup_by_domain.ts  professional_lookup.ts  run_risk_audit.ts  search_entities.ts  verify_vat.ts  zone_profile.ts
src/types/: entity.ts  errors.ts
tests/: test_funnel.py
