[project]
name = "entia-mcp"
version = "0.1.0"
description = "ENTIA client — structured business intelligence for AI agents. 5.5M entities, 34 countries."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "PrecisionAI Marketing OU", email = "trust@entia.systems"}]
keywords = ["entia", "mcp", "business-intelligence", "entity-verification", "langchain", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.8.0"]
langchain = ["langchain-core>=0.3.0"]
all = ["mcp>=1.8.0", "langchain-core>=0.3.0"]

[project.urls]
Homepage = "https://entia.systems"
Documentation = "https://entia.systems/mcp-docs"
Repository = "https://github.com/ENTIA-IA/entia-mcp-server"
"Get API Key" = "https://entia.systems/get-started"

[tool.setuptools]
packages = ["entia_mcp"]
